Alterando nome de login e senha pra serguir o padrão do user details